# Market-Structure-Engine

./: .gitignore  DATASET_REPORT.md  DECISION_ENGINE_REPORT.md  FEATURE_DIAGNOSTICS_REPORT.md  FEATURE_OPTIMIZATION_REPORT.md  FEATURE_REFERENCE.md  FEATURE_SCHEMA.md  LINEAR_REGRESSION_ENGINE_REPORT.md  LINEAR_REGRESSION_IMPROVEMENT_REPORT.md  LOGISTIC_REGRESSION_ENGINE_REPORT.md  LOGISTIC_REGRESSION_INFERENCE_UPDATE.md  MODEL_MONITORING_REPORT.md  RESIDUAL_ANALYSIS_REPORT.md  STRATEGY_ENGINE_REPORT.md  TARGET_ANALYSIS_REPORT.md  TRAINING_INFRASTRUCTURE_REPORT.md  pyproject.toml  pytest.ini
api/: __init__.py  main.py  middleware.py  pipeline.py  postman_collection.json  schemas.py
decision_engine/: __init__.py  config.py  decision_engine.py  decision_result.py  exceptions.py  explainability.py  market_analysis.py  recommendation.py  strategy_verdict.py  trade_plan_builder.py  validator.py  version.py
docs/: README.md
examples/: basic_usage.py  build_dataset_example.py  decision_engine_example.py  linear_regression_example.py  live_oanda_test.py  logistic_regression_example.py  model_monitoring_example.py  oanda_client.py  strategy_evaluation_example.py
forex_dynamics/: __init__.py
linear_regression/: __init__.py  confidence.py  config.py  cross_validation.py  evaluator.py  exceptions.py  feature_diagnostics.py  feature_mapper.py  inference.py  metrics.py  model_registry.py  model_scoring.py  predictor.py  regression_engine.py  regression_model.py  residual_diagnostics.py  target_diagnostics.py  target_generator.py  target_suitability.py  trainer.py  validator.py  (+1 more)
(+204 files in other folders)
